--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #change tomcat port number
 server.port=8085
 #DB connection properties: url username password driver 
-spring.datasource.url=jdbc:mysql://localhost:3306/SocietyManagement?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/SocietyManagementSystem?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
